<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharedTraveller</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="hello_world">Hello world!</string>

    <!-- ===================== Preferences ============================ -->
    <string name="server_url">Server Url:</string>
    <string name="notif_intervals">Notificaiton Intervals:</string>

    <!-- ===================== Common ============================ -->
    <string name="call_btn">Call</string>

    <!-- ===================== Requests swipe list view cosntants ========== -->
    <string name="request_status_icon_descr">An icon for the
        status of a request</string>
    <string name="accept_request_btn">Accept</string>
    <string name="reject_request_btn">Reject</string>
    <string name="rate_request_btn">Rate</string>

    <!-- ===================== Swipe list view constants ==================== -->
    <string name="loading_img_view_content_desc">Loading</string>
    <string name="newTag">New!</string>
    <string name="map">Map</string>
    <string name="details">Details</string>
    <string name="request">Request</string>
    <string name="announcements">Announcements</string>
    <string name="newRequest">New Request</string>
    <string name="requests">Requests</string>
    <string name="my_requests">My Requests</string>
    <string name="send_request_declination_notification">
        Send notification after request declination
    </string>
	<string name="send_notificaiton_on_travel_cancelation">
	    Send notification after a travel was cancelled
	</string>
    
    <!-- Swipe list view buttons constants -->
    <string name="btn_map">Map</string>
    <string name="btn_detils">Details</string>
    <string name="btn_request">Request</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_rate">Rate</string>
    <string name="btn_call">Call</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_hidden">Hidden</string>

    <!-- Swipe list view header constants -->
    <string name="header_from">From</string>
    <string name="header_to">To</string>
    <string name="header_date">Date</string>

    <!-- Announcement's Tabs -->
    <string name="required_str">*</string>
    <string name="announcement_start_pt">Start Point</string>
    <string name="announcement_end_pt">End Point</string>
    <string name="announcement_date">Date</string>
    <string name="announcement_time">Time</string>
    <string name="announcement_price">Price</string>
    <string name="announcement_seats">Seats</string>
    <string name="announcement_departure_address">Departure Address</string>
    <string name="announcement_vehicle">Vehicle</string>
    <string name="announcement_intermediate_pts">Intermediate Points</string>
    <string name="announcement_intermediate_pt">Intermediate Point</string>
    <string name="announcement_status">Status</string>
    <string name="new_intermediate_point">Add New Point</string>
    <string name="delete_intermediate_pt_btn">A button for deleting an intermediate point.</string>
    <string name="primary_announcemnt_tab">Primary</string>
    <string name="secondary_announcement_tab">Secondary</string>
    <string name="save_action">Save</string>
    <string name="labels_format">{0}:</string>

    <string-array name="announcement_tab_titles">
        <item>Primary</item>
        <item>Secondary</item>
    </string-array>

    <!-- ================== Swipe list view soer order header ========= -->
    <string name="sort_order_menu_from">Sort by "From"</string>
    <string name="sort_order_menu_to">Sort by "To"</string>

    <!-- ================== Localization Formats ======================= -->
    <string name="date_picker_format">{0,number,#}.{1,number,#}.{2,number,#}</string>
    <string name="time_picker_format">{0,number,#}:{1,number,#}</string>

    <!-- ================== Validation ================================= -->
    <string name="required_validator_template">The following fields do not have any value specified: {0}</string>
    <string name="field_names_separator">, </string>

    <!-- ================== Done bar strings =========================== -->
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="donebaractivity_description">In this presentation, a done bar replaces the action bar entirely, providing
            two direct actions to persist or dismiss changes. This is suitable for cases where no
            additional view details or actions are needed in the action bar.</string>

    <!-- =================== Edit event action bar buttons ============== -->
    <string name="discard_label">Discard</string>
    <string name="save_label">Save</string>

    <!-- =================== Notification Dialog ======================== -->
    <string name="notification_dialog_title">Send Request</string>
    <string name="notificaiton_dialog_sub_title">Send additional 
        notifications by:</string>
    <string name="notification_dialog_confirmation_btn">OK</string>
    <string name="notification_dialog_rejection_btn">Cancel</string>
    <string name="notification_dialog_email">email:</string>
    <string name="notification_dialog_sms">sms:</string>
    
    <!-- =================== Notification Dialog ======================== -->
    <string name="new_request_title">Send Request</string>
    <string name="new_request_sub_title">Are you sure you want to send a
        request to {0} about the travel from {1} to {2} on {3}.</string>
    <string name="new_request_confirmation_btn">Yes</string>
    <string name="new_request_rejection_btn">No</string>
    <string name="new_request_send_success">
        A new request has been sent successfully!</string>
    <string name="new_request_send_problem">
        A request could not be sent because of a problem.</string>

    <!-- ========================= View requests ======================== -->
    <string name="requests_usrname_hdr">Username</string>
    <string name="requests_status_hdr">Status</string>
    <string name="requests_accept_title">Accept Request</string>
    <string name="requests_accept_description">Are you sure you
        want to accept the request of user {0}?</string>
    <string name="requests_reject_title">Reject Request</string>
    <string name="requests_reject_description">Are you sure you
        want to reject the request of user {0}?</string>
    <string name="requests_confirm_btn">Yes</string>
    <string name="requests_reject_btn">No</string>
    <string name="requests_notification_confirm_btn">OK</string>
    <string name="requests_notification_reject_btn">Cancel</string>
    <string name="dash_separator">-</string>

    <!-- ========================= Social notifications ===================== -->
    <string name="notification_sms_error">Could not send an sms 
        notification because of a problem.</string>
   	<string name="notification_no_sms_service">Could not send an sms 
        notification because there is no active messaging service.</string>
   	<string name="notification_sms_radio_turned_off">Could not send an sms 
        notification because the radio signal is turned off.</string>
    <string name="notification_sms_delivered">The sms notification is
        successfully delivered.</string>
    <string name="notification_sms_not_delivered">The sms notification could
        not be delivered.</string>
    <string name="notification_declined_request">Hallo, This is a notification
        message that {0} declined their request for your travel
        from {1} to {2} on {3}.</string>
    <string name="notification_cancelled_trip">Hallo, This is a notification
        message that {0} cancelled their trip from {1} to {2} on {3}.</string>    
    <string name="notification_accepted_request">Hallo, This is a notification
        message that {0} accepted your request for the
        trip from {1} to {2} on {3}.</string>
    <string name="notification_new_request">Hallo, This is a notification
        message that {0} sent a request for your trip 
        from {1} to {2} on {3}.</string> 
    <string name="notification_rejected_request">Hallo, This is a notification
        message that {0} rejected your request for the trip
        from {1} to {2} on {3}.</string>
    <string name="notification_email_notification_ok">The email notification
        was successfully sent.</string> 
    <string name="notification_email_notification_error">The email notification
        could not be sent because of a problem.</string> 
</resources>