<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/requests_list_back"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        style="@style/requests_row_btns_holder"
        android:weightSum="3" >

        <Button
            android:id="@+id/accept_request_btn"
            style="@style/requests_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept_request_btn" />

        <Button
            android:id="@+id/rate_request_btn"
            style="@style/requests_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rate_request_btn" />

        <TextView
            android:id="@+id/requests_btn_placeholder"
            style="@style/requests_btn_placeholder"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/reject_request_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/reject_request_btn"
            android:text="@string/reject_request_btn" />

        <Button
            android:id="@+id/call_request_btn"
            style="@style/requests_call_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/requests_list_front"
        style="@style/requests_front"
        android:layout_width="fill_parent"
        android:layout_height="32dp" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/topless_light_border"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/request_sender_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" 
                style="@style/username_holder"/>

            <TextView
                style="@style/requests_delim_bar"
                android:layout_width="1dp"
                android:layout_height="fill_parent" />

            <ImageView 
                android:id="@+id/request_status_icon"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/request_status_icon_descr" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>