<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/header_from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/header_from"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/header_to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/header_to"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/header_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/header_date"
            android:inputType="date" />
    </LinearLayout>

</LinearLayout>