<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/announcement_tab_content"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/announcement_start_pt" />

        <TextView
            android:id="@+id/start_point"
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/announcement_end_pt" />

        <TextView
            android:id="@+id/end_point"
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/announcement_date" />

        <TextView
            android:id="@+id/departure_date"
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/announcement_time" />

        <TextView
            android:id="@+id/departure_time"
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/announcement_seats" />

        <TextView
            android:id="@+id/free_seats"
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/announcement_status" />

        <TextView
            android:id="@+id/status"
            style="@style/announcement_label"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" />
    </LinearLayout>

</LinearLayout>